# lxqt-organizer

./: AUTHORS  CMakeLists.txt  README.md  lxqt-organizer.desktop.in  organizer.desktop.in
docs/: architecture.md
src/: contactmodel.cpp  contactmodel.h  dbmanager.cpp  dialogappointment.cpp  dialogappointmentupdate.cpp  dialogrepeatappointment.cpp  dialogupcomingbirthdays.cpp  dialogupcomingschedule.cpp  dialogupcomingschedule.h  icons.qrc  lxqtorganizerapplication.cpp  lxqtorganizerapplication.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.lxqt.LXQtOrganizer.Application.xml  org.lxqt.Organizer.Application.xml  organizerapplication.cpp  organizerapplication.h
src/app/: application.cpp  application.h  applicationcontext.cpp  applicationcontext.h  main.cpp  sources.cmake
src/domain/: calendardisplaysnapshot.cpp  calendardisplaysnapshot.h  calendareditordata.h  calendareditormapper.cpp  calendareditormapper.h  calendaritem.cpp  calendaritem.h  calendaritemmutator.cpp  calendaritemmutator.h  calendarsnapshot.cpp  calendarsnapshot.h  calendarvalidation.cpp  calendarvalidation.h  collectionsummary.h  collectiontypes.h  collectionutils.cpp  collectionutils.h  contacteditordata.h  contacteditormapper.cpp  contacteditormapper.h  contactpatcher.cpp  contactpatcher.h  contactsnapshot.cpp  contactsnapshot.h  contactutils.cpp  contactutils.h  contactvalidation.cpp  contactvalidation.h  eventdatetime.cpp  eventdatetime.h  eventoccurrences.cpp  eventoccurrences.h  eventpatcher.cpp  eventpatcher.h  eventtimezone.cpp  eventtimezone.h  highlightmode.h  incidencefields.cpp  incidencefields.h  incidencelocator.h  (+8 more)
src/domain/codecs/: icalcodec.cpp  icalcodec.h  vcardcodec.cpp  vcardcodec.h
src/services/: asyncsubmit.h  calendarmover.h  cancellationtoken.h  collectioncatalog.cpp  collectioncatalog.h  collectionreloadsubscription.cpp  collectionreloadsubscription.h  collectionservice.cpp  collectionservice.h  completedfuture.h  contactservice.cpp  contactservice.h  eventreader.cpp  eventreader.h  eventservice.cpp  eventservice.h  futurewatch.h  itemservice.h  moveoutcomelog.h  operationcapability.cpp  operationcapability.h  sources.cmake  taskservice.cpp  taskservice.h
src/storage/api/: collectionresolver.h  sources.cmake  storagecollectionref.h  storagelog.h  storageresult.h  vdirio.h
src/storage/fs/: atomicfile.cpp  atomicfile.h  sources.cmake  storagelog.cpp  vdir.cpp  vdir.h  vdirioscheduler.cpp  vdirioscheduler.h
src/storage/repo/: calendaritemrepository.cpp  calendaritemrepository.h  calendaritemstore.cpp  calendaritemstore.h  contactitemstore.cpp  contactitemstore.h  contactrepository.cpp  contactrepository.h  contactstore.cpp  contactstore.h  itemstore.h  sources.cmake  vdiritemrepository.cpp  vdiritemrepository.h
src/translations/: lxqt-organizer.desktop.yaml  lxqt-organizer.ts  lxqt-organizer_de.desktop.yaml  lxqt-organizer_de.ts  lxqt-organizer_es.desktop.yaml  lxqt-organizer_es.ts  lxqt-organizer_fr.desktop.yaml  lxqt-organizer_fr.ts  lxqt-organizer_hr.desktop.yaml  lxqt-organizer_hr.ts  lxqt-organizer_it.desktop.yaml  lxqt-organizer_ja.desktop.yaml  lxqt-organizer_ja.ts  lxqt-organizer_pl.desktop.yaml  lxqt-organizer_pl.ts  lxqt-organizer_pt.desktop.yaml  lxqt-organizer_pt.ts  lxqt-organizer_tr.desktop.yaml  lxqt-organizer_tr.ts  lxqt-organizer_zh_CN.desktop.yaml  lxqt-organizer_zh_CN.ts  organizer.desktop.yaml  organizer.ts  organizer_de.desktop.yaml  organizer_de.ts  organizer_es.desktop.yaml  organizer_es.ts  organizer_fr.desktop.yaml  organizer_fr.ts  organizer_hr.ts  organizer_ja.ts  organizer_pl.desktop.yaml  organizer_pl.ts  organizer_pt.ts  organizer_tr.desktop.yaml  organizer_tr.ts  organizer_zh_CN.desktop.yaml  organizer_zh_CN.ts
src/ui/core/: mainwindowservices.h  sources.cmake  windowservices.h
src/ui/dialogs/: contactdialog.cpp  contactdialog.h  contactdialog.ui  eventdialog.cpp  eventdialog.h  eventdialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  sources.cmake  taskdialog.cpp  taskdialog.h  taskdialog.ui
src/ui/messages/: operationcapabilitymessages.cpp  operationcapabilitymessages.h  sources.cmake  storageerrormessages.cpp  storageerrormessages.h
src/ui/models/: contactmodel.cpp  contactmodel.h  contactsproxymodel.cpp  contactsproxymodel.h  sources.cmake  tasklistmodel.cpp  tasklistmodel.h
src/ui/panes/: calendarpane.cpp  calendarpane.h  calendarpane.ui  calendarpanecontroller.cpp  calendarpanecontroller.h  calendarpaneutils.cpp  calendarpaneutils.h  contactdialogflow.cpp  contactdialogflow.h  contactspane.cpp  contactspane.h  contactspane.ui  contactspanecontroller.cpp  contactspanecontroller.h  eventdialogflow.cpp  eventdialogflow.h  iactivepane.h  paneshelldeps.h  sources.cmake  taskdialogflow.cpp  taskdialogflow.h
src/ui/shell/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_composition.cpp  mainwindow_composition.h  mainwindowactioncontroller.cpp  mainwindowactioncontroller.h  mainwindowpresenter.cpp  mainwindowpresenter.h  mainwindowviewstate.cpp  mainwindowviewstate.h  preferencescontroller.cpp  preferencescontroller.h  reloadcoordinator.cpp  reloadcoordinator.h  settings_io.cpp  settings_io.h  sources.cmake  statusbarpresenter.cpp  statusbarpresenter.h  windowsettingsstore.cpp  windowsettingsstore.h
src/ui/widgets/: daytasklistwidget.cpp  daytasklistwidget.h  daytasklistwidget.ui  daytimelinewidget.cpp  daytimelinewidget.h  editorcombos.cpp  editorcombos.h  eventfindbar.cpp  eventfindbar.h  eventfindbar.ui  findbar.cpp  findbar.h  findbar.ui  monthcalendarwidget.cpp  monthcalendarwidget.h  monthchromewidget.cpp  monthchromewidget.h  monthchromewidget.ui  sources.cmake  tasklistwidget.cpp  tasklistwidget.h  tasklistwidget.ui  timelinelayout.cpp  timelinelayout.h  timelinepainter.cpp  timelinepainter.h
tools/: checks.py
